@@ -1,6 +1,7 @@
 # From: Thomas Dickey <dickey@clark.net> 04 Oct 1997
 # Updated: Özgür Kesim <kesim@math.fu-berlin.de> 02 Nov 1997
 # Updated: Marc Lehmann <pcg@goof.com>, 17 Feb 2005
+# Updated: Marc Lehmann <schmorp@schmorp.de>, 04 Nov 2008: change init/reset sequences
 rxvt-unicode|rxvt-unicode terminal (X Window System),
 	am,
 	bce,
@@ -48,8 +49,8 @@ rxvt-unicode|rxvt-unicode terminal (X Window System),
 	il=\E[%p1%dL,
 	il1=\E[L,
 	ind=^J,
-	is1=\E[?47l\E=\E[?1l,
-	is2=\E[r\E[m\E[2J\E[H\E[?7h\E[?1;3;4;6l\E[4l,
+	is1=\E[\041p,
+	is2=\E[r\E[m\E[?7;25h\E[?1;3;4;5;6;7;9;66;1000;1001;1049l\E[4l,
 	kDC=\E[3$,
 	kIC=\E2$,
 	kEND=\E[8$,
@@ -105,8 +106,8 @@ rxvt-unicode|rxvt-unicode terminal (X Window System),
 	ri=\EM,
 	rmso=\E[27m,
 	rmul=\E[24m,
-	rs1=\Ec,
-	rs2=\E[r\E[m\E[2J\E[H\E[?7h\E[?1;3;4;6l\E[4l\E>,
+	rs1=\E[c,
+	rs2=\E[r\E[m\E[?7;25h\E[?1;3;4;5;6;7;9;66;1000;1001;1049l\E[4l,
 	sgr0=\E[m\017,
 	enacs=,
 	smacs=\E(0,
